# face_detect

./: CMakeLists.txt  S06_face_detect  main.c  rkisp_control.c  rockface.h  rockface_control.c  rockface_control.h
